--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -29,6 +29,24 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
+      path: /mutate-infrastructure-cluster-x-k8s-io-v1alpha3-baremetalmachinetemplate
+  failurePolicy: Fail
+  name: default.baremetalmachinetemplate.infrastructure.cluster.x-k8s.io
+  rules:
+  - apiGroups:
+    - infrastructure.cluster.x-k8s.io
+    apiVersions:
+    - v1alpha3
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - baremetalmachinetemplates
+- clientConfig:
+    caBundle: Cg==
+    service:
+      name: webhook-service
+      namespace: system
       path: /mutate-infrastructure-cluster-x-k8s-io-v1alpha3-baremetalmachine
   failurePolicy: Fail
   name: default.baremetalmachine.infrastructure.cluster.x-k8s.io
@@ -68,6 +86,24 @@ webhooks:
     - UPDATE
     resources:
     - baremetalclusters
+- clientConfig:
+    caBundle: Cg==
+    service:
+      name: webhook-service
+      namespace: system
+      path: /validate-infrastructure-cluster-x-k8s-io-v1alpha3-baremetalmachinetemplate
+  failurePolicy: Fail
+  name: validation.baremetalmachinetemplate.infrastructure.cluster.x-k8s.io
+  rules:
+  - apiGroups:
+    - infrastructure.cluster.x-k8s.io
+    apiVersions:
+    - v1alpha3
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - baremetalmachinetemplates
 - clientConfig:
     caBundle: Cg==
     service:
