--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -3,6 +3,11 @@ kind: Kustomization
 # This kustomization.yaml is not intended to be run by itself,
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
+
+commonLabels:
+  cluster.x-k8s.io/v1alpha2: v1alpha2
+  cluster.x-k8s.io/v1alpha3: v1alpha3
+
 resources:
 - bases/infrastructure.cluster.x-k8s.io_baremetalclusters.yaml
 - bases/infrastructure.cluster.x-k8s.io_baremetalmachines.yaml
