--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -6,3 +6,8 @@ resources:
 
 generatorOptions:
  disableNameSuffixHash: true
+
+patchesStrategicMerge:
+- manager_image_patch.yaml
+- manager_pull_policy.yaml
+- manager_auth_proxy_patch.yaml
