--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -1,12 +1,54 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
+namePrefix: capm3-
 
-# Adds namespace to all resources.
-namespace: capm3-system
+commonLabels:
+  cluster.x-k8s.io/provider: "infrastructure-metal3"
 
 resources:
-- namespace.yaml
+  - namespace.yaml
 
 bases:
-- ../rbac
-- ../manager
+  - ../crd
+  - ../rbac
+  - ../manager
+  - ../webhook
+  - ../certmanager
+  - ../bmo
+  - ../ipam
+
+patchesStrategicMerge:
+  - manager_auth_proxy_patch.yaml
+  - manager_image_patch.yaml
+  - manager_pull_policy_patch.yaml
+  - manager_webhook_patch.yaml
+  - webhookcainjection_patch.yaml
+
+vars:
+- name: CERTIFICATE_NAMESPACE # namespace of the certificate CR
+  objref:
+    kind: Certificate
+    group: cert-manager.io
+    version: v1alpha2
+    name: serving-cert # this name should match the one in certificate.yaml
+  fieldref:
+    fieldpath: metadata.namespace
+- name: CERTIFICATE_NAME
+  objref:
+    kind: Certificate
+    group: cert-manager.io
+    version: v1alpha2
+    name: serving-cert # this name should match the one in certificate.yaml
+- name: SERVICE_NAMESPACE # namespace of the service
+  objref:
+    kind: Service
+    version: v1
+    name: webhook-service
+  fieldref:
+    fieldpath: metadata.namespace
+- name: SERVICE_NAME
+  objref:
+    kind: Service
+    version: v1
+    name: webhook-service
+
+configurations:
+  - kustomizeconfig.yaml
