--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -20,6 +20,8 @@ spec:
       containers:
       - command:
         - /manager
+        args:
+          - "--metrics-bind-addr=127.0.0.1:8080"
         image: controller:latest
         imagePullPolicy: IfNotPresent
         name: manager
