Fix examples generation and pin provider-components image tags
Fixes issues that prevented generation and deployment of example
manifests.

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ kubeconfig
 bin/*
 hack/tools/bin/*
 examples/_out/*
+examples/envsubst-go
 examples/provider-components/*-components.yaml
 out/*
 
