--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -86,6 +86,14 @@ rules:
   - list
   - watch
 - apiGroups:
+  - cluster.x-k8s.io
+  resources:
+  - machinesets
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
   - infrastructure.cluster.x-k8s.io
   resources:
   - metal3clusters
